--- a/src/index.html
+++ b/src/index.html
@@ -20,9 +20,7 @@
     <p>Adipisci voluptate aliquam ad quis nostrum. Et, ipsam odit? Expedita?</p>
 
     <a href="#">Ссылка</a> <a href="#">Вторая ссылка</a>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium ab quidem rem qui magnam at voluptates
-        doloremque repudiandae. Excepturi maxime, animi inventore consectetur voluptatem debitis recusandae nam numquam
-        aliquid corrupti.</p>
+    <p>Тестовый текст</p>
 
 </body>
 
